[tool.poetry]
name = "pyvyu"
version = "0.2.0"
description = "Python API for Datavyu"
authors = ["Shohan Hasan <shohan.hasan@databrary.org>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
appdirs = ">=1.4.3"
atomicwrites = ">=1.3.0"
attrs = ">=19.1.0"
black = ">=19.3b0"
certifi = ">=2019.3.9"
chardet = ">=3.0.4"
Click = ">=7.0"
codecov = ">=2.0.15"
coverage = ">=4.5.3"
coveralls = ">=1.7.0"
docopt = ">=0.6.2"
idna = ">=2.8"
more-itertools = ">=7.0.0"
numpy = ">=1.16.3"
pandas = ">=0.24.2"
pluggy = ">=0.9.0"
py = ">=1.8.0"
pytest = ">=4.4.1"
pytest-cov = ">=2.6.1"
python-dateutil = ">=2.8.0"
pytz = ">=2019.1"
requests = ">=2.21.0"
six = ">=1.12.0"
toml = ">=0.10.0"
urllib3 = ">=1.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
